--- a/index.html
+++ b/index.html
@@ -1,14 +1,17 @@
 <!DOCTYPE html>
-<html>
+<html lang ="en">
     <head>
+        <title>Pictureperfect.online</title>
+        <meta charset="UTF-8"/>
+        <meta name="viewport" content="width=device-width, initial-scale=1">
         <link rel="stylesheet" type="text/css" href="style.css">
     </head>
         <body>
+            <header>Welcome to Pictureperfect.online</header>
             <div id="menu-bar">
             <a href="index.html">Home</a>
             <a href="about.html">About</a>
             <a href="contact.html">Contact</a>
-
             <p>Please <a href="https://www.pictureperfect.online">Click here</a> to go to Pictureperfect</p>
             </div>
             <h1>Pictureperfect.online: Capturing Life's Perfect Moments</h1>
@@ -23,6 +26,31 @@
                 <li>Adventurous travel experiences</li>
                 <li>And much more!</li>
             </ul>
+            <main>
+                <section id ="Home">
+                    <h2>Home</h2>
+                    <p>Welcome to our website! We are glad to have you here.</p>
+                    <p>Our goal is to provide you with the best experience possible.</p>
+                    </section>
+                    <section id ="About">
+                    <h2>About</h2>
+                    <p>We are a team of passionate individuals dedicated to bringing you the best content.</p>
+                    <p>Our mission is to inspire and empower you through our work.</p>
+                    </section>
+                    <section id ="Contact">
+                    <h2>Contact</h2>
+                    <p>If you have any questions or inquiries, please feel free to reach out to us.</p>
+                    <form>
+                        <label for="name">Name:</label>
+                        <input type="text" id="name" name="name" required>
+                        <label for="email">Email:</label>
+                        <input type="email" id="email" name="email" required>
+                        <label for="message">Message:</label>
+                        <textarea id="message" name="message" required></textarea>
+                        <button type="submit">Submit</button>
+                    </form>
+                    </section>
+
             <ol>
                 <li>Browse our extensive gallery</li>
                 <li>Find the perfect image for your project</li>
@@ -38,7 +66,30 @@
             <a href="https://www.google.com">click here to go to google</a>
             <a href="https://www.pexels.com">click here to go to pexels</a>
         </body>
-        
+        <footer>
+             <section id ="Contact">
+                    <h2>Contact</h2>
+                    <p>If you have any questions or inquiries, please feel free to reach out to us.</p>
+                    <form>
+                        <label for="Solly">Solly</label>
+                        <input type="text" id="Solly" name="Solly" required>
+                        <label for="suleimankaldine.suli@gmail.com">suleimankaldine.suli@gmail.com</label>
+                        <input type="email" id="email" name="email" value="suleimankaldine.suli@gmail.com" required>
+                        <label for="message">Message:</label>
+                        <textarea id="message" name="message" required></textarea>
+                        <button type="submit">Submit</button>
+                        <button type="reset">Reset</button>
+                        <button type="button" onclick="window.location.href='https://www.google.com'">Google</button>
+                    </form>
+                    </section>
+            <p>&copy; 2023 Pictureperfect.online. All rights reserved.</p>
+            <p>Follow us on social media:</p>
+            <ul>
+                <li><a href="https://www.facebook.com">Facebook</a></li>
+                <li><a href="https://www.twitter.com">Twitter</a></li>
+                <li><a href="https://www.instagram.com">Instagram</a></li>
+            </ul>
+        </footer>
 
 
     
