--- a/index.html
+++ b/index.html
@@ -1,13 +1,13 @@
 <!DOCTYPE html>
 <html lang ="en">
-    <head>
-        <title>Pictureperfect.online</title>
+ <head>
         <meta charset="UTF-8"/>
         <meta name="viewport" content="width=device-width, initial-scale=1">
+        <title>Pictureperfect.online</title>
+
         <link rel="stylesheet" type="text/css" href="style.css">
     </head>
         <body>
-            <header>Welcome to Pictureperfect.online</header>
             <div id="menu-bar">
             <a href="index.html">Home</a>
             <a href="about.html">About</a>
@@ -20,7 +20,7 @@
             <p>Our platform is designed to help you preserve your most cherished memories in the most beautiful way possible.</p>
             <h2>Explore Our Collection</h2>
             <ul>
-                <li>Stunning landscapes</li>
+                <li>Stunning landscapes</li>        
                 <li>Vibrant cityscapes</li>
                 <li>Heartwarming family moments</li>
                 <li>Adventurous travel experiences</li>
@@ -36,20 +36,6 @@
                     <h2>About</h2>
                     <p>We are a team of passionate individuals dedicated to bringing you the best content.</p>
                     <p>Our mission is to inspire and empower you through our work.</p>
-                    </section>
-                    <section id ="Contact">
-                    <h2>Contact</h2>
-                    <p>If you have any questions or inquiries, please feel free to reach out to us.</p>
-                    <form>
-                        <label for="name">Name:</label>
-                        <input type="text" id="name" name="name" required>
-                        <label for="email">Email:</label>
-                        <input type="email" id="email" name="email" required>
-                        <label for="message">Message:</label>
-                        <textarea id="message" name="message" required></textarea>
-                        <button type="submit">Submit</button>
-                    </form>
-                    </section>
 
             <ol>
                 <li>Browse our extensive gallery</li>
@@ -71,10 +57,10 @@
                     <h2>Contact</h2>
                     <p>If you have any questions or inquiries, please feel free to reach out to us.</p>
                     <form>
-                        <label for="Solly">Solly</label>
-                        <input type="text" id="Solly" name="Solly" required>
-                        <label for="suleimankaldine.suli@gmail.com">suleimankaldine.suli@gmail.com</label>
-                        <input type="email" id="email" name="email" value="suleimankaldine.suli@gmail.com" required>
+                        <label for="Name and Surname">Name and Surname:</label>
+                        <input type="text" id="name" name="name" required>
+                        <label for="email">Email:</label>
+                        <input type="email" id="email" name="email" value="email" required>
                         <label for="message">Message:</label>
                         <textarea id="message" name="message" required></textarea>
                         <button type="submit">Submit</button>
@@ -82,7 +68,7 @@
                         <button type="button" onclick="window.location.href='https://www.google.com'">Google</button>
                     </form>
                     </section>
-            <p>&copy; 2023 Pictureperfect.online. All rights reserved.</p>
+            <p>&copy; 2025 Pictureperfect.online. All rights reserved.</p>
             <p>Follow us on social media:</p>
             <ul>
                 <li><a href="https://www.facebook.com">Facebook</a></li>
@@ -93,4 +79,4 @@
 
 
     
-</html>
+        </html>
